# RocketLogAI

./: .dockerignore  .gitignore  .mailmap  AGENTS.md  COMMIT_MESSAGE.md  CONTRIBUTING.md  CONVERSATIONAL_DEVICE_AUTOMATION.md  DISCLAIMER.md  Dockerfile  INSTALL.md  LICENSE  README.md  SECURITY.md  TESTING.md  USAGE.md  docker-compose.yml  errors.txt  example-config.yaml  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  pages.yml
.grok/skills/opensource-legal/: SKILL.md
RocketLogAI_Ver1.0/: BACKUP_README.txt  Dockerfile  README.md  docker-compose.yml  example-config.yaml  pyproject.toml  requirements.txt
RocketLogAI_Ver1.0/docs/: USAGE.md
RocketLogAI_Ver1.0/logsentinel/: __init__.py  analyzer.py  auth.py  cli.py  config.py  geo.py  ha.py  llm.py  mac_vendor.py  parser.py  rules.py  storage.py  syslog_server.py  web.py
RocketLogAI_Ver1.0/scripts/: install.ps1  install.sh
RocketLogAI_Ver1.0/templates/: analyses.html  analysis_detail.html  automation.html  base.html  config.html  dashboard.html  device_detail.html  devices.html  integrations.html  login.html  logs.html  maps.html  monitors.html  threats.html  users.html
RocketLogAI_Ver1.0/templates/fragments/: recent_threats.html
docs/: CONVERSATIONAL_DEVICE_AUTOMATION.md  FALSE_POSITIVES_HOME_LAB.md  USAGE.md  architecture.html  architecture.md  index.html
helm/rocketlogai/: Chart.yaml  values.yaml
helm/rocketlogai/templates/: deployment.yaml  pvc.yaml  service.yaml
legal/: GITHUB_PROJECT_CHECKLIST.md  README_DISCLAIMER_BLOCK.md  SHARED_COPY.md
logsentinel/: __init__.py  analyzer.py  assistant_tasks.py  auth.py  blacklist.py  certs.py  cli.py  config.py  datasource.py  diagnostics.py  geo.py  ha.py  heartbeat.py  ibmi.py  llm.py  mac_vendor.py  noise.py  oi_compat.py  operator_nl.py  remediation.py  rules.py  storage.py  syslog_server.py  v2_api.py  v2_runtime.py  web.py
logsentinel/agents/: __init__.py  control.py  manager.py
logsentinel/ai_assistant/: __init__.py  controller.py
logsentinel/audit/: __init__.py  logger.py
logsentinel/brain/: __init__.py  memory.py  orchestrator.py  rag.py  vector_store.py
logsentinel/integrations/: __init__.py  compliance.py  opnsense.py  pfsense.py  wazuh.py
logsentinel/mcp/: __init__.py  server.py  tools.py
logsentinel/mobile/: __init__.py  api.py  sync.py
logsentinel/observability/: __init__.py  logging_config.py  metrics.py
logsentinel/plugins/: __init__.py  base.py  registry.py
logsentinel/remediate/: __init__.py  approval.py  backup.py  engine.py  rollback.py
logsentinel/shield/: __init__.py  av_scanner.py  modes.py  parental.py  waf.py
logsentinel/ueba/: __init__.py  baselines.py  detector.py  reports.py
scripts/: check.ps1  check.sh  enrich_external_geo.py  healthcheck.py  install-docker.ps1  install-docker.sh  install.ps1  install.sh  ps-windows.ps1  rla_backup.py  rla_cleanup.py  rla_python.py  setup.ps1  setup.sh  signoff_test.py  sweep_false_positives.py  test_ha_forward.py  upgrade.ps1  upgrade.sh  validate-powershell.ps1
templates/: activity.html  agents.html  analyses.html  assistant.html  base.html  config.html  daily.html  dashboard.html  device_detail.html  devices.html  integrations.html  login.html  maps.html  monitors.html  shield.html  system_health.html  threats.html  users.html
templates/fragments/: recent_analyses.html
tests/: test_noise.py  test_v2_brain.py  test_v2_mcp.py  test_v2_remediate.py  test_v2_shield.py  test_v2_storage.py
